# job-opening-rag

./: .gitignore  README.md  env.example  pyproject.toml
app/: main.py
app/clients/: __init__.py  database.py  openai_client.py  redis_client.py
app/core/: config.py
app/db/: __init__.py  queries.py
app/routers/: webhooks.py
app/services/: __init__.py  openai_service.py  redis_service.py
db/: schema.sql  seed.sql
google-apps-script/: SyncToPostgres.gs  sample-sheet-template.csv
