[project]
name = "job-opening-rag"
version = "0.1.0"
description = "WhatsApp bot for job opening recommendations using RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]

[project.scripts]
start = "python -m app.main"
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
